@@ -1,3 +1,11 @@
+2012-04-10  Doug Evans  <dje@google.com>
+
+	* dwarf2read.c (dwarf2_per_cu_data). Clarify comment.
+	(load_partial_dies): Clarify comment.
+	(find_partial_die): Support rereading type units.
+	Clarify CU handling, if we know offset is in CU, don't search for the
+	containing CU.  Add comment regarding memory waste.
+
 2012-04-10  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* features/Makefile (WHICH): Add i386/x32, i386/x32-linux,
